@@ -1,0 +1,3 @@
+copy "Converter.UI.exe" "..\..\..\release\Converter.UI.exe"
+copy "..\..\UserPreferences.xml" "..\..\..\release\UserPreferences.xml"
+copy "..\..\Configuration.xml" "..\..\..\release\Configuration.xml"
