@@ -500,3 +500,4 @@ Revision	Log Message
 
 477		Remove dead titles
 478		Various fixes for better mod support
+479		Converter mod output now more convenient
